--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -83,9 +83,9 @@ android {
     buildToolsVersion rootProject.ext.buildToolsVersion
     compileSdk rootProject.ext.compileSdkVersion
 
-    namespace 'com.theoribeiro.opsqliteexpotursotest'
+    namespace 'com.yourcompany.yourapp'
     defaultConfig {
-        applicationId 'com.theoribeiro.opsqliteexpotursotest'
+        applicationId 'com.yourcompany.yourapp'
         minSdkVersion rootProject.ext.minSdkVersion
         targetSdkVersion rootProject.ext.targetSdkVersion
         versionCode 1
