--- a/app.json
+++ b/app.json
@@ -1,38 +1,16 @@
 {
   "expo": {
     "name": "op-sqlite-expo-turso-test",
+    "scheme": "myapp",
     "slug": "op-sqlite-expo-turso-test",
     "version": "1.0.0",
-    "orientation": "portrait",
-    "icon": "./assets/images/icon.png",
-    "scheme": "myapp",
-    "userInterfaceStyle": "automatic",
-    "splash": {
-      "image": "./assets/images/splash.png",
-      "resizeMode": "contain",
-      "backgroundColor": "#ffffff"
+    "sdkVersion": "51.0.0",
+    "platforms": ["ios", "android", "web"],
+    "android": {
+      "package": "com.yourcompany.yourapp"
     },
     "ios": {
-      "supportsTablet": true,
-      "bundleIdentifier": "com.theoribeiro.opsqliteexpotursotest"
-    },
-    "android": {
-      "adaptiveIcon": {
-        "foregroundImage": "./assets/images/adaptive-icon.png",
-        "backgroundColor": "#ffffff"
-      },
-      "package": "com.theoribeiro.opsqliteexpotursotest"
-    },
-    "web": {
-      "bundler": "metro",
-      "output": "static",
-      "favicon": "./assets/images/favicon.png"
-    },
-    "plugins": [
-      "expo-router"
-    ],
-    "experiments": {
-      "typedRoutes": true
+      "bundleIdentifier": "com.yourcompany.yourapp"
     }
   }
 }
