feat(db)!: reorganize database structure and add intervalSync
BREAKING CHANGE: Restructure project and database operations

- Move all database-related tasks to the 'db' folder
- Implement intervalSync functionality for database
- Update database queries and mutation functions

fix: add .env files to .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -13,6 +13,12 @@ web-build/
 # macOS
 .DS_Store
 
+# dotenv environment variable files
+.env
+.env.development.local
+.env.test.local
+.env.production.local
+.env.local
 
-
+#
 pnpm-lock.yaml
