--- a/package.json
+++ b/package.json
@@ -4,54 +4,104 @@
   "version": "1.0.0",
   "scripts": {
     "start": "expo start",
+    "expo:doctor": "pnpm dlx expo-doctor@latest",
+    "expo:install:fix": "pnpm dlx expo install --fix",
     "reset-project": "node ./scripts/reset-project.js",
     "android": "expo run:android",
     "ios": "expo run:ios",
     "web": "expo start --web",
     "test": "jest --watchAll",
     "lint": "expo lint",
-    "pod": "pnpm dlx pod-install",
-    "prebuild": "pnpm dlx expo prebuild"
+    "pod": "npx expo run:ios",
+    "prebuild": "expo prebuild",
+    "prebuild:clean": "expo prebuild --clean",
+    "rebuild": "node ./scripts/clear-expo-builds.js && pnpm prebuild:clean && pnpm pod && pnpm ios"
   },
   "jest": {
     "preset": "jest-expo"
   },
   "dependencies": {
-    "@expo/vector-icons": "^14.0.2",
-    "@faker-js/faker": "^8.4.1",
-    "@op-engineering/op-sqlite": "^7.0.1",
-    "@react-navigation/native": "^6.0.2",
-    "expo": "~51.0.20",
-    "expo-constants": "~16.0.2",
-    "expo-dev-client": "~4.0.20",
-    "expo-font": "~12.0.8",
-    "expo-linking": "~6.3.1",
-    "expo-router": "~3.5.18",
-    "expo-splash-screen": "~0.27.5",
-    "expo-status-bar": "~1.12.1",
-    "expo-system-ui": "~3.0.7",
-    "expo-web-browser": "~13.0.3",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "react-native": "0.74.3",
-    "react-native-gesture-handler": "~2.16.1",
-    "react-native-reanimated": "~3.10.1",
-    "react-native-safe-area-context": "4.10.1",
-    "react-native-screens": "3.31.1",
-    "react-native-web": "~0.19.10"
+    "@expo/vector-icons": "14.1.0",
+    "@faker-js/faker": "9.9.0",
+    "@op-engineering/op-sqlite": "14.1.1",
+    "@react-navigation/bottom-tabs": "^7.3.10",
+    "@react-navigation/native": "^7.1.6",
+    "@tanstack/react-query": "^5.81.5",
+    "@tanstack/react-query-devtools": "^5.81.5",
+    "expo": "53.0.17",
+    "expo-blur": "14.1.5",
+    "expo-constants": "17.1.7",
+    "expo-font": "13.3.2",
+    "expo-haptics": "14.1.4",
+    "expo-linking": "7.1.7",
+    "expo-router": "5.1.3",
+    "expo-splash-screen": "0.30.10",
+    "expo-status-bar": "2.2.3",
+    "expo-symbols": "0.4.5",
+    "expo-system-ui": "5.0.10",
+    "expo-web-browser": "14.2.0",
+    "react": "19.0.0",
+    "react-dom": "19.0.0",
+    "react-native": "0.79.5",
+    "react-native-gesture-handler": "2.24.0",
+    "react-native-reanimated": "3.17.5",
+    "react-native-safe-area-context": "5.4.0",
+    "react-native-screens": "4.11.1",
+    "react-native-web": "0.20.0",
+    "react-native-webview": "13.13.5"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0",
-    "@types/jest": "^29.5.12",
-    "@types/react": "~18.2.45",
-    "@types/react-test-renderer": "^18.0.7",
-    "jest": "^29.2.1",
-    "jest-expo": "~51.0.3",
-    "react-test-renderer": "18.2.0",
-    "typescript": "~5.3.3"
+    "@babel/core": "7.28.0",
+    "@expo/cli": "^0.24.18",
+    "@react-native-community/cli": "18.0.0",
+    "@tanstack/eslint-plugin-query": "5.81.2",
+    "@types/jest": "30.0.0",
+    "@types/react": "19.0.14",
+    "@types/react-test-renderer": "19.1.0",
+    "jest": "29.7.0",
+    "jest-expo": "53.0.9",
+    "react-test-renderer": "19.1.0",
+    "typescript": "5.8.3"
+  },
+  "expo": {
+    "doctor": {
+      "reactNativeDirectoryCheck": {
+        "enabled": true,
+        "exclude": [
+          "@faker-js/faker",
+          "@tanstack/react-query-devtools"
+        ],
+        "listUnknownPackages": true
+      }
+    }
   },
   "op-sqlite": {
+    "performanceMode": true,
     "libsql": true
   },
-  "private": true
+  "pnpm": {
+    "onlyBuiltDependencies": [
+      "@op-engineering/op-sqlite",
+      "expo",
+      "expo-dev-client",
+      "@react-navigation/native",
+      "expo-constants",
+      "expo-font",
+      "expo-linking",
+      "expo-router",
+      "expo-splash-screen",
+      "expo-status-bar",
+      "expo-system-ui",
+      "expo-web-browser",
+      "expo",
+      "expo-dev-client"
+    ]
+  },
+  "engines": {
+    "node": "22.13.0"
+  },
+  "private": true,
+  "volta": {
+    "node": "22.13.0"
+  }
 }
