📝 docs(tsconfig): update tsconfig to include expoPlugins and exclude node_modules
- update include to include expoPlugins
- update paths to point to src directory
- exclude node_modules directory

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,12 +4,16 @@
     "strict": true,
     "paths": {
       "@/*": [
-        "./*"
+        "./src/*"
       ]
     }
   },
   "include": [
     "**/*.ts",
-    "**/*.tsx"
+    "**/*.tsx",
+    "expoPlugins/**/*.ts"
+  ],
+  "exclude": [
+    "node_modules"
   ]
 }
