📝 docs: add encryption key to .env.sample
- add EXPO_PUBLIC_TURSO_ENCRYPTION_KEY to .env.sample

--- a/.env.sample
+++ b/.env.sample
@@ -1,2 +1,3 @@
-EXPO_PUBLIC_TURSO_DATABASE_URL='your libsql url'
-EXPO_PUBLIC_TURSO_AUTH_TOKEN='your api key'
+EXPO_PUBLIC_TURSO_DATABASE_URL=your-libsql-url
+EXPO_PUBLIC_TURSO_AUTH_TOKEN=your-api-key
+EXPO_PUBLIC_TURSO_ENCRYPTION_KEY=your-encryption-key
