✨ feat: add intent filter and URL scheme for deep linking
- add intent filter to AndroidManifest.xml to handle deep links with the scheme "opsqliteexpotursotest"
- add URL scheme "opsqliteexpotursotest" to Info.plist for iOS deep linking

--- a/ios/yourappyourname/Info.plist
+++ b/ios/yourappyourname/Info.plist
@@ -27,6 +27,7 @@
       <dict>
         <key>CFBundleURLSchemes</key>
         <array>
+          <string>opsqliteexpotursotest</string>
           <string>com.theoribeiro.opsqliteexpotursotest</string>
         </array>
       </dict>
