🔧 chore(deps): upgrade dependencies and update project configuration
This commit updates several dependencies to newer versions and adjusts configuration files for project maintenance and dependency alignment.

✨ feat(docs): add CLAUDE.md for AI guidance

- add CLAUDE.md file providing project overview, development commands, and architecture details for Claude Code.

🔧 chore(deps): remove pnpm node-linker setting

- remove `node-linker=hoisted` from `.npmrc` as it's often unnecessary or conflicting in standard pnpm setups.

♻️ refactor(android): update Android build configuration for optimization and clarity

- rename `enableProguardInReleaseBuilds` to `enableMinifyInReleaseBuilds` for R8 optimization alignment.
- introduce `BuildConfig.REACT_NATIVE_RELEASE_LEVEL` for build configuration.
- update resource packaging options to use boolean conversion for properties.
- enable edge-to-edge display support via `gradle.properties`.
- update AndroidManifest to disable `android:enableOnBackInvokedCallback` and add a secondary deep link scheme.

♻️ refactor(ios): update Podfile and project settings for dependency management

- update Podfile to use `npx expo` for autolinking execution and configure `RCT_USE_RN_DEP` and `RCT_USE_PREBUILT_RNCORE`.
- remove legacy resource bundle signing logic from Pods target.
- update Podfile.lock reflecting major dependency version bumps (Expo SDK 53 -> 54, op-sqlite 14.1.1 -> 15.2.5, RN 0.79.5 -> 0.81.5, etc.).
- update project settings to use new Podfile.lock structure and remove references to deprecated/removed pods (like Folly).
- update `Info.plist` to include the custom deep linking scheme `exp+your-app-your-name` and enable New Architecture.

🔧 chore(config): update Expo configuration and splash screen assets

- update `app.config.ts` to include `expo-font` and `expo-web-browser` plugins.
- update iOS splash screen storyboard to use `SplashScreenLegacy` asset instead of `SplashScreenLogo`.
- update iOS splash screen to use `systemBac

--- a/ios/yourappyourname/Info.plist
+++ b/ios/yourappyourname/Info.plist
@@ -31,6 +31,12 @@
           <string>com.theoribeiro.opsqliteexpotursotest</string>
         </array>
       </dict>
+      <dict>
+        <key>CFBundleURLSchemes</key>
+        <array>
+          <string>exp+your-app-your-name</string>
+        </array>
+      </dict>
     </array>
     <key>CFBundleVersion</key>
     <string>1</string>
@@ -49,6 +55,8 @@
     <array>
       <string>$(PRODUCT_BUNDLE_IDENTIFIER).expo.index_route</string>
     </array>
+    <key>RCTNewArchEnabled</key>
+    <true/>
     <key>UILaunchStoryboardName</key>
     <string>SplashScreen</string>
     <key>UIRequiredDeviceCapabilities</key>
