--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "scripts": {
     "start": "expo start --dev-client",
     "start:clear": "expo start --dev-client --clear",
-    "expo:doctor": "pnpm dlx expo-doctor@latest",
-    "expo:install:fix": "pnpm dlx expo install --fix",
+    "expo:doctor": "npx expo-doctor@latest",
+    "expo:install:fix": "npx expo install --pnpm --fix",
     "reset-project": "node ./scripts/reset-project.js",
     "android": "expo run:android",
     "ios": "expo run:ios",
@@ -16,52 +16,55 @@
     "pod": "npx expo run:ios",
     "prebuild": "expo prebuild",
     "prebuild:clean": "expo prebuild --clean",
-    "rebuild": "node scripts/clear-expo-builds.js && pnpm prebuild:clean && pnpm pod && pnpm ios"
+    "expo:rebuild": "node scripts/clear-expo-builds.js && pnpm prebuild:clean && pnpm pod && pnpm ios"
   },
   "jest": {
     "preset": "jest-expo"
   },
   "dependencies": {
-    "@expo/vector-icons": "14.1.0",
-    "@faker-js/faker": "9.9.0",
-    "@op-engineering/op-sqlite": "14.1.1",
+    "@expo/vector-icons": "15.0.3",
+    "@faker-js/faker": "10.3.0",
+    "@op-engineering/op-sqlite": "15.2.5",
     "@react-navigation/bottom-tabs": "^7.3.10",
     "@react-navigation/native": "^7.1.6",
-    "@tanstack/react-query": "^5.81.5",
-    "expo": "53.0.17",
-    "expo-blur": "14.1.5",
-    "expo-constants": "17.1.7",
-    "expo-font": "13.3.2",
-    "expo-haptics": "14.1.4",
-    "expo-linking": "7.1.7",
-    "expo-router": "5.1.3",
-    "expo-splash-screen": "0.30.10",
-    "expo-status-bar": "2.2.3",
-    "expo-symbols": "0.4.5",
-    "expo-system-ui": "5.0.10",
-    "expo-web-browser": "14.2.0",
-    "react": "19.0.0",
-    "react-dom": "19.0.0",
-    "react-native": "0.79.5",
-    "react-native-gesture-handler": "2.24.0",
-    "react-native-reanimated": "3.17.5",
-    "react-native-safe-area-context": "5.4.0",
-    "react-native-screens": "4.11.1",
-    "react-native-web": "0.20.0",
-    "react-native-webview": "13.13.5"
+    "@tanstack/react-query": "5.90.21",
+    "expo": "54.0.33",
+    "expo-blur": "15.0.8",
+    "expo-constants": "18.0.13",
+    "expo-dev-client": "~6.0.20",
+    "expo-font": "14.0.11",
+    "expo-haptics": "15.0.8",
+    "expo-linking": "8.0.11",
+    "expo-router": "6.0.23",
+    "expo-splash-screen": "31.0.13",
+    "expo-status-bar": "3.0.9",
+    "expo-symbols": "1.0.8",
+    "expo-system-ui": "6.0.9",
+    "expo-web-browser": "15.0.10",
+    "react": "19.1.0",
+    "react-dom": "19.1.0",
+    "react-native": "0.81.5",
+    "react-native-gesture-handler": "2.28.0",
+    "react-native-reanimated": "4.1.6",
+    "react-native-safe-area-context": "5.6.2",
+    "react-native-screens": "4.16.0",
+    "react-native-web": "0.21.2",
+    "react-native-webview": "13.15.0",
+    "react-native-worklets": "0.5.1"
   },
   "devDependencies": {
     "@babel/core": "7.28.0",
-    "@expo/cli": "^0.24.18",
+    "@expo/cli": "0.24.20",
     "@react-native-community/cli": "18.0.0",
-    "@tanstack/eslint-plugin-query": "5.81.2",
-    "@types/jest": "30.0.0",
-    "@types/react": "19.0.14",
+    "@tanstack/eslint-plugin-query": "5.91.4",
+    "@types/jest": "29.5.14",
+    "@types/node": "^25.3.0",
+    "@types/react": "~19.1.10",
     "@types/react-test-renderer": "19.1.0",
     "jest": "29.7.0",
-    "jest-expo": "53.0.9",
+    "jest-expo": "~54.0.17",
     "react-test-renderer": "19.1.0",
-    "typescript": "5.8.3"
+    "typescript": "5.9.2"
   },
   "expo": {
     "doctor": {
@@ -98,7 +101,18 @@
     ]
   },
   "engines": {
-    "node": "22.13.0"
+    "runtime": {
+      "name": "node",
+      "version": "22.13.0",
+      "onFail": "download"
+    }
+  },
+  "devEngines": {
+    "runtime": {
+      "name": "node",
+      "version": "22.13.0",
+      "onFail": "download"
+    }
   },
   "private": true,
   "volta": {
